[tool.poetry]
name = "pushprom-python-client"
version = "0.1.0"
description = "Python client for pushprom"
authors = ["duch94 <vtduch@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
